--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -97,8 +97,7 @@ img {
 
 header {
   width:270px;
-  float:left;
-  position:fixed;
+  float:none;
 }
 
 header ul {
@@ -160,8 +159,7 @@ header ul a strong {
 }
 
 section {
-  width:500px;
-  float:right;
+  float:none;
   padding-bottom:50px;
 }
 
